{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 33,
  "lineage": "018549de-1f92-9ca2-117c-e280828b1779",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mokpolar-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c18be24a0aef5e6f",
            "arn": "arn:aws:ec2:ap-northeast-2:723053157750:instance/i-0ed43e7519b6063e2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ed43e7519b6063e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01f2c49101e0f9301",
            "private_dns": "ip-10-10-1-171.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.171",
            "public_dns": "ec2-3-36-92-133.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.92.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0b6176fa514a85f91",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b72fde753475308",
            "tags": {
              "Name": "HallsHolicker-jjang"
            },
            "tags_all": {
              "Name": "HallsHolicker-jjang"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-01b506652f4975b4f"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.mokpolar-igw",
            "aws_security_group.mokpolar-sg",
            "aws_subnet.mokpolar-subnet1",
            "aws_vpc.mokpolar-vpc",
            "data.aws_ami.mokpolar_amazonlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mokpolar-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:723053157750:internet-gateway/igw-0d75988e74e71a392",
            "id": "igw-0d75988e74e71a392",
            "owner_id": "723053157750",
            "tags": {
              "Name": "t101-igw"
            },
            "tags_all": {
              "Name": "t101-igw"
            },
            "vpc_id": "vpc-097cc406006104729"
          },
          "dependencies": [
            "aws_vpc.mokpolar-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mokpolar-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:723053157750:loadbalancer/app/t101-alb/ca30174b40ac75bb",
            "arn_suffix": "app/t101-alb/ca30174b40ac75bb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "t101-alb-52975748.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:723053157750:loadbalancer/app/t101-alb/ca30174b40ac75bb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "t101-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01b506652f4975b4f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05b72fde753475308"
              },
              {
                "subnet_id": "subnet-06bd841b16f87a0c5"
              }
            ],
            "subnets": [
              "subnet-05b72fde753475308",
              "subnet-06bd841b16f87a0c5"
            ],
            "tags": {
              "Name": "t101-alb"
            },
            "tags_all": {
              "Name": "t101-alb"
            },
            "vpc_id": "vpc-097cc406006104729",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.mokpolar-sg",
            "aws_subnet.mokpolar-subnet1",
            "aws_subnet.mokpolar-subnet2",
            "aws_vpc.mokpolar-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mokpolar-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:723053157750:listener/app/t101-alb/ca30174b40ac75bb/acdfdd4445160285",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found - T101 Study",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:723053157750:listener/app/t101-alb/ca30174b40ac75bb/acdfdd4445160285",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:723053157750:loadbalancer/app/t101-alb/ca30174b40ac75bb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.mokpolar-alb",
            "aws_security_group.mokpolar-sg",
            "aws_subnet.mokpolar-subnet1",
            "aws_subnet.mokpolar-subnet2",
            "aws_vpc.mokpolar-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "mokpolar-albrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:723053157750:targetgroup/t101-alb-tg/8295abc8127b641c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:723053157750:listener-rule/app/t101-alb/ca30174b40ac75bb/acdfdd4445160285/e75093793aea7230",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:723053157750:listener-rule/app/t101-alb/ca30174b40ac75bb/acdfdd4445160285/e75093793aea7230",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:723053157750:listener/app/t101-alb/ca30174b40ac75bb/acdfdd4445160285",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.mokpolar-alb",
            "aws_lb_listener.mokpolar-http",
            "aws_lb_target_group.mokpolar-albtg",
            "aws_security_group.mokpolar-sg",
            "aws_subnet.mokpolar-subnet1",
            "aws_subnet.mokpolar-subnet2",
            "aws_vpc.mokpolar-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mokpolar-albtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:723053157750:targetgroup/t101-alb-tg/8295abc8127b641c",
            "arn_suffix": "targetgroup/t101-alb-tg/8295abc8127b641c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:723053157750:targetgroup/t101-alb-tg/8295abc8127b641c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "t101-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-097cc406006104729"
          },
          "dependencies": [
            "aws_vpc.mokpolar-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "mydefaultroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d75988e74e71a392",
            "id": "r-rtb-0eda752d58e6670461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eda752d58e667046",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mokpolar-igw",
            "aws_route_table.mokpolar-rt",
            "aws_vpc.mokpolar-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mokpolar-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:723053157750:route-table/rtb-0eda752d58e667046",
            "id": "rtb-0eda752d58e667046",
            "owner_id": "723053157750",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d75988e74e71a392",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "t101-rt"
            },
            "tags_all": {
              "Name": "t101-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-097cc406006104729"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mokpolar-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mokpolar-rtassociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068324b9895ef049c",
            "route_table_id": "rtb-0eda752d58e667046",
            "subnet_id": "subnet-05b72fde753475308"
          },
          "dependencies": [
            "aws_route_table.mokpolar-rt",
            "aws_subnet.mokpolar-subnet1",
            "aws_vpc.mokpolar-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mokpolar-rtassociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0704ddf50fa057f91",
            "route_table_id": "rtb-0eda752d58e667046",
            "subnet_id": "subnet-06bd841b16f87a0c5"
          },
          "dependencies": [
            "aws_route_table.mokpolar-rt",
            "aws_subnet.mokpolar-subnet2",
            "aws_vpc.mokpolar-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mokpolar-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:723053157750:security-group/sg-01b506652f4975b4f",
            "description": "T101 Study SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b506652f4975b4f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "T101 SG",
            "name_prefix": "",
            "owner_id": "723053157750",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-097cc406006104729"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mokpolar-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mokpolar-sginbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-97875322",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01b506652f4975b4f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mokpolar-sg",
            "aws_vpc.mokpolar-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mokpolar-sgoutbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3858781971",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01b506652f4975b4f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mokpolar-sg",
            "aws_vpc.mokpolar-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mokpolar-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:723053157750:subnet/subnet-05b72fde753475308",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b72fde753475308",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "723053157750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "t101-subnet1"
            },
            "tags_all": {
              "Name": "t101-subnet1"
            },
            "vpc_id": "vpc-097cc406006104729"
          },
          "dependencies": [
            "aws_vpc.mokpolar-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mokpolar-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:723053157750:subnet/subnet-06bd841b16f87a0c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bd841b16f87a0c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "723053157750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "t101-subnet2"
            },
            "tags_all": {
              "Name": "t101-subnet2"
            },
            "vpc_id": "vpc-097cc406006104729"
          },
          "dependencies": [
            "aws_vpc.mokpolar-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mokpolar-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:723053157750:vpc/vpc-097cc406006104729",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-013ba01f65a081857",
            "default_route_table_id": "rtb-0da6ab844328f5a79",
            "default_security_group_id": "sg-0a50621fba6f6a236",
            "dhcp_options_id": "dopt-efcb5484",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-097cc406006104729",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0da6ab844328f5a79",
            "owner_id": "723053157750",
            "tags": {
              "Name": "t101-study"
            },
            "tags_all": {
              "Name": "t101-study"
            }
          }
        }
      ]
    }
  ]
}